fix(styles): allow buttons to wrap

--- a/packages/styles/base.css
+++ b/packages/styles/base.css
@@ -63,7 +63,6 @@ button,
   display: inline-block;
   zoom: 1;
   line-height: normal;
-  white-space: nowrap;
   vertical-align: middle;
   text-align: center;
   user-select: none;
